compiler/test-data/parser/backend/errors/unclosed_brace.frel
module backend.errors.unclosed_brace

backend Counter {
    count : i32 = 0
